--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿a2wsgi==1.10.7
+a2wsgi==1.10.7
 accelerate==1.2.1
 aiohappyeyeballs==2.4.4
 aiohttp==3.11.11
@@ -28,6 +28,7 @@ cssselect2==0.7.0
 datasets==3.2.0
 dill==0.3.8
 Django==5.1.2
+ecdsa==0.19.0
 et_xmlfile==2.0.0
 fastapi==0.115.0
 filelock==3.16.1
@@ -45,7 +46,7 @@ greenlet==3.1.1
 grpcio==1.68.1
 grpcio-status==1.68.1
 gunicorn==23.0.0
-h11==0.14.0
+h11==0.8.1
 h2==3.2.0
 hpack==3.0.0
 html5lib==1.1
@@ -56,6 +57,8 @@ hyperframe==5.2.0
 idna==2.10
 Jinja2==3.1.4
 jmespath==1.0.1
+jose==1.0.0
+jwt==1.3.1
 lxml==5.3.0
 MarkupSafe==3.0.1
 mpmath==1.3.0
@@ -68,6 +71,7 @@ oscrypto==1.3.0
 outcome==1.3.0.post0
 packaging==24.1
 pandas==2.2.3
+passlib==1.7.4
 pillow==10.4.0
 propcache==0.2.1
 proto-plus==1.25.0
@@ -92,6 +96,7 @@ PySocks==1.7.1
 python-bidi==0.6.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-jose==3.3.0
 python-multipart==0.0.20
 pytz==2024.2
 PyYAML==6.0.2
