--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ greenlet==3.1.1
 grpcio==1.68.1
 grpcio-status==1.68.1
 gunicorn==23.0.0
-h11==0.8.1
+h11<0.15 and >=0.13
 h2==3.2.0
 hpack==3.0.0
 html5lib==1.1
